--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		<div id="info" class="clearfix">
 			<div id="license">
 				<!-- these creative commons license tags keep the site from validating...but maybe the W3C hasn't caught up with CC attributes yet -->
-				<p>When I put out my <a href="http://b.illbrown.com/camera" target="_blank" >Camera Collection</a> and my <a href="http://b.illbrown.com/iwannalivehere" target="_blank" >New Orleans Homes </a> I licensed them under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution License</a>. Since all of these illustrations are clearly based on specific games and consols I don't feel like I can do that here.</p>
+				<p>When I put out my <a href="http://b.illbrown.com/cameracollection" target="_blank" >Camera Collection</a> and my <a href="http://b.illbrown.com/neworleans" target="_blank" >New Orleans Homes </a> I licensed them under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution License</a>. Since all of these illustrations are clearly based on specific games and consols I don't feel like I can do that here.</p>
 			</div>
 			<div id="downloads" >
 				<p>Download as a <a href="consols.eps"><abbr title="encapsulated postscript">.eps</abbr></a>, <a href="consols.ai"><abbr title="Adobe Illustrator">.ai</abbr></a> or 
